# m2_hw9

scrap/: README.md  pyproject.toml
scrap/scrap/: main.py
scrap/scrap/scrap/: database.py  items.py
scrap/scrap/scrap/spiders/: spider.py
