[tool.poetry]
name = "scrap"
version = "0.1.0"
description = ""
authors = ["Pelmenoff <Titanfall@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.0"
psycopg2 = "^2.9.9"
peewee = "^3.16.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
